--- a/Onebox/dashboard.html
+++ b/Onebox/dashboard.html
@@ -127,7 +127,7 @@
                         <h6 class="m-0 font-weight-bold text-primary">PBK Status Overview</h6>
                     </div>
                     <div class="card-body">
-                        <div class="chart-area">
+                        <div class="chart-container">
                             <canvas id="pbkStatusChart" width="400" height="200"></canvas>
                         </div>
                     </div>
